--- a/LSTM_v3.ipynb
+++ b/LSTM_v3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "007cf397-ca8f-4920-9862-85a1645d62ae",
    "metadata": {},
    "outputs": [],
@@ -3841,9 +3841,150 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35207ff4-c981-4e04-a643-d21607203345",
+   "metadata": {},
+   "source": [
+    "# Konačna verzija"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9f93b0f7-e021-4af5-a23d-e5c594fa40c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dynamic_standardize_sequences_no_leakage(X_train, y_train, X_test, y_test):\n",
+    "    \"\"\"\n",
+    "    STANDARDIZACIJA BEZ DATA LEAKAGE\n",
+    "    \"\"\"\n",
+    "    # Standardizuj FEATURE-E (X) - SAMO TRENING\n",
+    "    X_mean = np.mean(X_train, axis=(0, 1))\n",
+    "    X_std = np.std(X_train, axis=(0, 1))\n",
+    "    X_std = np.where(X_std == 0, 1, X_std)\n",
+    "    \n",
+    "    X_train_std = (X_train - X_mean) / X_std\n",
+    "    # X_test se NE standardizuje - koristi se direktno!\n",
+    "    \n",
+    "    # Standardizuj TARGET (y) - SAMO TRENING  \n",
+    "    y_mean = np.mean(y_train)\n",
+    "    y_std = np.std(y_train)\n",
+    "    y_std = 1 if y_std == 0 else y_std\n",
+    "    \n",
+    "    y_train_std = (y_train - y_mean) / y_std\n",
+    "    # y_test se NE standardizuje - koristi se direktno!\n",
+    "    \n",
+    "    standardization_params = {\n",
+    "        'X_mean': X_mean, 'X_std': X_std,\n",
+    "        'y_mean': y_mean, 'y_std': y_std\n",
+    "    }\n",
+    "    \n",
+    "    print(f\"   Target standardizacija: mean={y_mean:.2f}, std={y_std:.2f}\")\n",
+    "    \n",
+    "    # ✅ BEZ LEAKAGE: vrati NEstandardizovane test podatke\n",
+    "    return X_train_std, y_train_std, X_test, y_test, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2c19d0e9-7a6f-4051-b816-0a0ea34c0d22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_without_leakage(cleaned_datasets, sequence_length=60, split_date='2025-01-01'):\n",
+    "    \"\"\"\n",
+    "    Treniranje BEZ DATA LEAKAGE\n",
+    "    \"\"\"\n",
+    "    results = {}\n",
+    "\n",
+    "    for price_name, dataset in cleaned_datasets.items():\n",
+    "        print(f\"\\n🎯 TRENIRAM BEZ LEAKAGE ZA {price_name}...\")\n",
+    "        print(\"=\" * 60)\n",
+    "        \n",
+    "        # Pripremi podatke\n",
+    "        X_train, y_train, X_test, y_test, train_data, test_data = prepare_lstm_data_with_date_split(\n",
+    "            dataset, price_name, sequence_length, split_date\n",
+    "        )\n",
+    "        \n",
+    "        # STANDARDIZACIJA BEZ LEAKAGE\n",
+    "        X_train_std, y_train_std, X_test_raw, y_test_raw, std_params = dynamic_standardize_sequences_no_leakage(\n",
+    "            X_train, y_train, X_test, y_test\n",
+    "        )\n",
+    "        \n",
+    "        # Treniraj model na standardizovanim TRENING podacima\n",
+    "        model = create_lstm_model_fixed(X_train_std.shape[1], X_train_std.shape[2])\n",
+    "        \n",
+    "        history = model.fit(X_train_std, y_train_std, \n",
+    "                          epochs=100,\n",
+    "                          batch_size=32,\n",
+    "                          validation_split=0.2,  # Koristi validaciju iz treninga\n",
+    "                          verbose=1,\n",
+    "                          callbacks=create_smart_callbacks())\n",
+    "        \n",
+    "        # ✅ ISPRAVNA PREDIKCIJA: Standardizuj test podatke PRED predikciju\n",
+    "        X_test_std = (X_test_raw - std_params['X_mean']) / std_params['X_std']\n",
+    "        predictions_std = model.predict(X_test_std)\n",
+    "        \n",
+    "        # Vrati predikcije u originalnu skalu\n",
+    "        predictions = (predictions_std * std_params['y_std']) + std_params['y_mean']\n",
+    "        \n",
+    "        # Evaluacija na NEstandardizovanim test podacima\n",
+    "        mse = mean_squared_error(y_test_raw, predictions)\n",
+    "        mae = mean_absolute_error(y_test_raw, predictions)\n",
+    "        \n",
+    "        print(f\"✅ {price_name} BEZ LEAKAGE\")\n",
+    "        print(f\"   MAE: {mae:.2f} points\")\n",
+    "        print(f\"   Greška: {(mae/4500)*100:.1f}%\")\n",
+    "        \n",
+    "        results[price_name] = {\n",
+    "            'model': model, 'predictions': predictions,\n",
+    "            'actual': y_test_raw, 'mse': mse, 'mae': mae\n",
+    "        }\n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "88d48103-f3d9-4c82-abfb-b8b694b4ee52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔄 POKREĆEM BEZ DATA LEAKAGE...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'cleaned_datasets' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# ZAUSTAVI TRENUTNI I POKRENI BEZ LEAKAGE\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m🔄 POKREĆEM BEZ DATA LEAKAGE...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m results_no_leakage \u001b[38;5;241m=\u001b[39m train_without_leakage(\n\u001b[1;32m----> 4\u001b[0m     cleaned_datasets,\n\u001b[0;32m      5\u001b[0m     sequence_length\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m60\u001b[39m,\n\u001b[0;32m      6\u001b[0m     split_date\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2025-01-2025\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      7\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cleaned_datasets' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# ZAUSTAVI TRENUTNI I POKRENI BEZ LEAKAGE\n",
+    "print(\"🔄 POKREĆEM BEZ DATA LEAKAGE...\")\n",
+    "results_no_leakage = train_without_leakage(\n",
+    "    cleaned_datasets,\n",
+    "    sequence_length=60,\n",
+    "    split_date='2025-01-2025'\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e418f0c-f724-4c15-bc70-2f90ce73fec6",
+   "id": "ea91fe13-7b93-4a53-a4e0-7816f99a9d30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3851,7 +3992,9 @@
   {
    "cell_type": "markdown",
    "id": "9247f6a8-104c-442d-b7da-678c77328c70",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Probna verzija"
    ]
